adds student course list, term session list fixes laundry service apis so production works
