# docs/swagger.json
@@ -56,6 +56,53 @@
                 }
             }
         },
+        "/courses/studentcourses": {
+            "get": {
+                "security": [
+                    {
+                        "RokwireAuth ExternalAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "summary": "Returns a list of registered courses",
+                "operationId": "Studentcourses",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "term id",
+                        "name": "termid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Course"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/laundry/initrequest": {
             "get": {
                 "security": [
@@ -224,6 +271,37 @@
                 }
             }
         },
+        "/termsessions/listcurrent": {
+            "get": {
+                "security": [
+                    {
+                        "RokwireAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "summary": "Get a list of term sessions centered on the calculated current session",
+                "operationId": "TermSession",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.TermSession"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/token": {
             "post": {
                 "security": [
@@ -308,6 +386,18 @@
                         "type": "boolean",
                         "description": "ADA entrances filter",
                         "name": "adaOnly",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "latitude coordinate of the user",
+                        "name": "lat",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "longitude coordinate of the user",
+                        "name": "long",
                         "in": "query"
                     }
                 ],
@@ -523,6 +613,61 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Course": {
+            "type": "object",
+            "properties": {
+                "coursenumber": {
+                    "type": "string"
+                },
+                "coursesection": {
+                    "$ref": "#/definitions/model.CourseSection"
+                },
+                "courseshortname": {
+                    "type": "string"
+                },
+                "coursetitle": {
+                    "type": "string"
+                },
+                "instructionmethod": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CourseSection": {
+            "type": "object",
+            "properties": {
+                "building": {
+                    "$ref": "#/definitions/model.Building"
+                },
+                "buildingid": {
+                    "type": "string"
+                },
+                "buildingname": {
+                    "type": "string"
+                },
+                "days": {
+                    "type": "string"
+                },
+                "endtime": {
+                    "type": "string"
+                },
+                "instructiontype": {
+                    "type": "string"
+                },
+                "instructor": {
+                    "type": "string"
+                },
+                "meeting_dates_or_range": {
+                    "type": "string"
+                },
+                "room": {
+                    "type": "string"
+                },
+                "start_time": {
                     "type": "string"
                 }
             }
@@ -766,6 +911,20 @@
                     "type": "string"
                 },
                 "problemcode": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TermSession": {
+            "type": "object",
+            "properties": {
+                "is_current": {
+                    "type": "boolean"
+                },
+                "term": {
+                    "type": "string"
+                },
+                "termid": {
                     "type": "string"
                 }
             }
